# resized_image_transport

./: CMakeLists.txt  LICENSE  README.md  package.xml  resized_plugins.xml
include/resized_image_transport/: resized_publisher.h  resized_subscriber.h
src/: manifest.cpp  resized_publisher.cpp  resized_subscriber.cpp
